<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/default_question" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp">

        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobuttona" />

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobuttonb" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobuttonc" />

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobuttond" />
    </RadioGroup>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/score" />

    <TextView
        android:id="@+id/scoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/_0" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prev"
        android:layout_alignBottom="@+id/prev"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickNext"
        android:text="@string/next" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSubmit"
        android:text="@string/submit" />

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:onClick="onClickPrev"
        android:text="@string/previous" />

</RelativeLayout>
